updating README.md and LICENSE